biggest rectangle in histogram

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,9 @@ file(GLOB CONVEX_HULL_HEADER include/ConvexHull/*.hpp)
 file(GLOB FAST_EXPO_SRC src/FastExponentiation/*.cpp)
 file(GLOB FAST_EXPO_HEADER include/FastExponentiation/*.hpp)
 
+file(GLOB BIG_REC_SRC src/BiggestRectangleInHistogram/*.cpp)
+file(GLOB BIG_REC_HEADER include/BiggestRectangleInHistogram/*.hpp)
+
 add_executable( ${CMAKE_PROJECT_NAME}_ConvexHull
     ${CONVEX_HULL_SRC}
     ${CONVEX_HULL_HEADER}
@@ -25,6 +28,11 @@ add_executable( ${CMAKE_PROJECT_NAME}_ConvexHull
 add_executable( ${CMAKE_PROJECT_NAME}_FastExpo
     ${FAST_EXPO_SRC}
     ${FAST_EXPO_HEADER}
+)
+
+add_executable( ${CMAKE_PROJECT_NAME}_BigRec
+    ${BIG_REC_SRC}
+    ${BIG_REC_HEADER}
 )
 
 target_link_libraries(${CMAKE_PROJECT_NAME}_ConvexHull sfml-graphics sfml-audio)
