added test for linear equation system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,14 @@ add_executable( ${CMAKE_PROJECT_NAME}_BigRec
     ${BIG_REC_HEADER}
 )
 
-add_executable( ${CMAKE_PROJECT_NAME}_LinSys
+# add_executable( ${CMAKE_PROJECT_NAME}_LinSys
+#     ${LIN_SYS_SRC}
+#     ${LIN_SYS_HEADER}
+# )
+
+add_executable( ${CMAKE_PROJECT_NAME}_LinSysTest
+    src/Test/linearEquationTest.cpp
+    src/Test/catch.cpp
     ${LIN_SYS_SRC}
     ${LIN_SYS_HEADER}
 )
